# ldplab

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.sh  configure.sh
include/: Debug.cpp  (+2 more)
src/: BuildInfo.cpp  CMakeLists.txt  LogCallback.cpp  Profiling.cpp  ldplab.hpp
src/ExperimentalSetup/Utils/: ObjLoader.cpp  PropertyGenerator.cpp
src/LDPLAB/: BuildInfo.cpp  BuildInfo.hpp  CMakeLists.txt  Constants.hpp  ExperimentalSetup.hpp  Geometry.hpp  ILightDirection.hpp  ILightDistribution.hpp  ILightGeometry.hpp  ILightPolarization.hpp  IParticleGeometry.hpp  IParticleMaterial.hpp  IRayTracingStep.hpp  Lightsource.hpp  Log.cpp  Log.hpp  LogCallback.cpp  LogCallback.hpp  Particle.hpp  Profiling.cpp  Profiling.hpp  RayTracingStepFactory.hpp  SimulationState.hpp  ThreadPool.cpp  ThreadPool.hpp  UID.hpp
src/LDPLAB/ExperimentalSetup/: BoundingVolume.hpp  ExperimentalSetup.hpp  ILightDirection.hpp  ILightDistribution.hpp  ILightGeometry.hpp  ILightPolarization.hpp  IParticleGeometry.hpp  IParticleMaterial.hpp  LightDirection.hpp  LightDistribution.hpp  LightPolarization.hpp  Lightsource.hpp  Particle.hpp  ParticleGeometry.hpp  ParticleMaterial.hpp
src/LDPLAB/RayTracingStep/: EikonalSolver.hpp  IRayTracingStep.hpp  RayTracingStepCPUInfo.hpp  RayTracingStepFactory.cpp  RayTracingStepFactory.hpp  RayTracingStepGPUOpenGLInfo.hpp  RayTracingStepInput.hpp  RayTracingStepOutput.hpp
src/LDPLAB/RayTracingStepCPU/: RayBuffer.cpp  RayBuffer.hpp  RayTracingStepCPU.hpp  RayTracingStepCPUInfo.hpp
src/LDPLAB/Utils/: Assert.hpp  ComputeHelper.cpp  ComputeHelper.hpp  Log.cpp  Log.hpp  Profiler.cpp  Profiler.hpp  ThreadPool.cpp  ThreadPool.hpp  UID.hpp
src/RayTracingStep/: RayTracingStepFactory.cpp
src/RayTracingStep/CPU/: DefaultBoundingVolumeIntersectionFactories.cpp  DefaultGenericGeometryFactories.cpp  DefaultInitialStageFactories.cpp  DefaultInnerParticlePropagationFactories.cpp  DefaultParticleIntersectionFactories.cpp  DefaultSurfaceInteractionFactories.cpp  Factory.cpp  Factory.hpp  IPipelineStage.cpp  ImplBoundingVolumeIntersection.cpp  ImplBoundingVolumeIntersection.hpp  ImplGenericGeometry.cpp  ImplGenericGeometry.hpp  ImplInitialStage.cpp  ImplInitialStage.hpp  ImplInnerParticlePropagation.cpp  ImplInnerParticlePropagation.hpp  ImplParticleIntersection.cpp  ImplParticleIntersection.hpp  ImplSurfaceInteraction.cpp  ImplSurfaceInteraction.hpp  IntersectionTests.cpp  MemoryControl.cpp  MemoryControl.hpp  Pipeline.cpp  Pipeline.hpp  RayTracingStepCPU.cpp  RayTracingStepCPU.hpp
src/RayTracingStep/CUDA/: CudaResource.cu  Data.cu  DefaultBoundingVolumeIntersectionFactories.cu  DefaultGenericGeometryFactories.cu  DefaultGenericMaterialFactories.cu  DefaultInitialStageFactories.cu  DefaultInnerParticlePropagationFactories.cu  DefaultParticleIntersectionFactories.cu  DefaultSurfaceInteractionFactories.cu  DeviceResource.cu  Factory.cu  Factory.hpp  GenericBoundingVolume.hpp  GenericParticleMaterial.cu  IPipeline.cu  IPipeline.hpp  ImplBoundingVolumeIntersection.cu  ImplBoundingVolumeIntersection.hpp  ImplGenericGeometry.cu  ImplGenericGeometry.hpp  ImplGenericMaterial.cu  ImplGenericMaterial.hpp  ImplInitialStage.cu  ImplInitialStage.hpp  ImplInnerParticlePropagation.cu  ImplInnerParticlePropagation.hpp  ImplParticleIntersection.cu  ImplParticleIntersection.hpp  ImplSurfaceInteraction.cu  ImplSurfaceInteraction.hpp  IntersectionTests.cu  IntersectionTests.hpp  ParallelContext.cu  Pipeline.cu  PipelineData.hpp  PipelineDeviceBound.cu  PipelineDeviceBound.hpp  PipelineHostBound.cu  PipelineHostBound.hpp  PipelineParticleInteraction.hpp  (+17 more)
src/RayTracingStep/OpenGL/: Context.hpp  Factory.cpp  Factory.hpp  InitialStage.hpp  InnerParticlePropagationStage.cpp  OpenGLContext.hpp  Pipeline.cpp  Pipeline.hpp  RayBoundingVolumeIntersectionTestStage.cpp  RayParticleInteractionStage.cpp  RayParticleInteractionStage.hpp  RayParticleIntersectionTestStage.cpp  RayParticleIntersectionTestStage.hpp  SharedShaders.cpp
src/RayTracingStep/RayTracingStepCPU/: AcceleratorStructures.cpp  AcceleratorStructures.hpp  BufferControl.cpp  BufferControl.hpp  Context.hpp  Data.hpp  Factory.cpp  Factory.hpp  GenericGeometry.cpp  GenericGeometry.hpp  IAcceleratorStructure.cpp  IAcceleratorStructure.hpp  IIntersectionTest.hpp  InitialStage.cpp  InitialStage.hpp  InnerParticlePropagationStage.cpp  InnerParticlePropagationStage.hpp  IntersectionTests.cpp  IntersectionTests.hpp  ParticleAcceleratorStructures.cpp  ParticleAcceleratorStructures.hpp  Pipeline.cpp  Pipeline.hpp  RayBoundingVolumeIntersectionTestStage.cpp  RayBoundingVolumeIntersectionTestStage.hpp  RayParticleInteractionStage.cpp  RayParticleInteractionStage.hpp  RayParticleIntersectionTestStage.cpp  RayParticleIntersectionTestStage.hpp  RayTracingStep.cpp  RayTracingStep.hpp
src/RayTracingStep/RayTracingStepCUDA/: AcceleratorStructures.cpp  AcceleratorStructures.cu  AcceleratorStructures.hpp  BufferControl.cpp  BufferControl.hpp  Context.hpp  CudaContext.cu  CudaContext.hpp  CudaData.hpp  CudaResource.cu  CudaResource.hpp  Data.cu  Data.hpp  Factory.cpp  Factory.cu  Factory.hpp  GenericBoundingVolume.cu  GenericBoundingVolume.hpp  GenericGeometry.cpp  GenericGeometry.cu  GenericGeometry.hpp  GenericParticleGeometry.cu  GenericParticleGeometry.hpp  GenericParticleMaterial.cu  GenericParticleMaterial.hpp  InitialStage.cpp  InitialStage.cu  InitialStage.hpp  InnerParticlePropagationStage.cpp  InnerParticlePropagationStage.cu  InnerParticlePropagationStage.hpp  IntersectionTests.cpp  IntersectionTests.cu  IntersectionTests.hpp  Pipeline.cpp  Pipeline.cu  Pipeline.hpp  PipelineBoundingVolumeIntersection.cu  PipelineBoundingVolumeIntersection.hpp  PipelineBufferSetup.cu  (+24 more)
src/Utils/: Array.hpp  Assert.hpp  ComputeHelper.cpp  ComputeHelper.hpp  Log.cpp  Log.hpp  Profiler.cpp  Profiler.hpp  ThreadPool.cpp  ThreadPool.hpp
test/: CMakeLists.txt  TestExample.cpp  TestLog.cpp  TestSimulation.cpp  TestSimulationCPU.cpp  TestSimulationCUDA.cpp  TestSimulationGPU.cpp  TestThreadPool.cpp
test/Verification/: CMakeLists.txt  ITest.hpp  Main.cpp
(+238 files in other folders)
